# stellarites

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pytest_out.txt  render.yaml
Backend/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  nannychain.db  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  schema.sql
Backend/app/: __init__.py  main.py
Backend/app/api/v1/: reviews.py
Backend/app/cache/: __init__.py
Backend/app/config/: __init__.py
Backend/app/db/: __init__.py
Backend/app/db/repositories/: __init__.py  claim_repository.py  review_repository.py  schedule_repository.py  worker_repository.py
Backend/app/integrations/africastalking/: __init__.py  sms.py
Backend/app/integrations/ipfs/: __init__.py
Backend/app/integrations/mpesa/: __init__.py  b2c.py  stk_push.py
Backend/app/middlewares/: auth_middleware.py
Backend/app/routes/: accounts.py  payments.py  reviews.py  schedules.py  stellar.py
Backend/app/schemas/: review.py
Backend/app/services/: account.py  horizon.py  payments.py  pdf.py  review.py  stellar.py  user_service.py
Backend/app/ussd/: __init__.py  handler.py  ussd_gateway.py
Backend/app/utils/: exceptions.py  review_token.py  stellar_helpers.py  validators.py
Backend/docker/: Dockerfile
Backend/docs/: architecture.md  review_plan.md  ussd_flow.md
Backend/scripts/: check_imports.py  debug_verify.py
Backend/tests/: conftest.py  test_health.py  test_payments_api.py  test_payments_service.py  test_reviews.py  test_ussd.py
Frontend/: PRD.md  index.html  (+4 more)
(+41 files in other folders)
